--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "core-js": "^3.16.4",
-    "kolmafia": "4.0.1",
+    "kolmafia": "^5.26804.0",
     "libram": "^0.7.1"
   },
   "author": "LASS",
