--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "babel-loader": "^8.2.2",
     "eslint": "^7.28.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-libram": "^0.2.17",
+    "eslint-plugin-libram": "^0.2.29",
     "prettier": "^2.3.1",
     "typescript": "^4.0.3",
     "webpack": "^5.8.0",
@@ -34,8 +34,8 @@
   },
   "dependencies": {
     "core-js": "^3.16.4",
-    "kolmafia": "4.0.1",
-    "libram": "^0.7.1"
+    "kolmafia": "^5.27281.0",
+    "libram": "^0.7.11"
   },
   "author": "LASS",
   "license": "ISC",
